--- a/www/index.html
+++ b/www/index.html
@@ -3,9 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Вивчення JavaScript</title>
 </head>
 <body>
-  
+  <noscript>Включіть JavaScript!!!</noscript>
+
+  <script>
+    // Comment
+
+    /*
+    More
+    comments
+    */
+  </script>
 </body>
 </html>
