lesson_2(Output to the console)

--- a/www/index.html
+++ b/www/index.html
@@ -6,15 +6,13 @@
   <title>Вивчення JavaScript</title>
 </head>
 <body>
-  <noscript>Включіть JavaScript!!!</noscript>
 
-  <script>
-    // Comment
-
-    /*
-    More
-    comments
-    */
+  <script src="js/main.js">
+    // document.write("JavaScript говорить мені") // застарілий метод
+    // console.log("JavaScript говорить мені");
+    // console.info("JavaScript говорить мені")
+    // console.error("JavaScript говорить мені")
+    // console.warn("JavaScript говорить мені")
   </script>
 </body>
 </html>
