--- a/www/index.html
+++ b/www/index.html
@@ -7,12 +7,6 @@
 </head>
 <body>
 
-  <script src="js/main.js">
-    // document.write("JavaScript говорить мені") // застарілий метод
-    // console.log("JavaScript говорить мені");
-    // console.info("JavaScript говорить мені")
-    // console.error("JavaScript говорить мені")
-    // console.warn("JavaScript говорить мені")
-  </script>
+  <script src="js/main.js"></script>
 </body>
 </html>
