lesson_10(Events and event handler)

--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,9 @@
   <title>Вивчення JavaScript</title>
 </head>
 <body>
-
+  <button name="main_button" onclick="onClickButton(this)">Натисни на мене</button>
+  
+  <input oninput="onInput(this)">
   <script src="js/main.js"></script>
 </body>
 </html>
