lesson_12(Creating timers and intervals)

--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,9 @@
   <title>Вивчення JavaScript</title>
 </head>
 <body>
-  <form id="main-form" method="post">
+
+  
+  <!-- <form id="main-form" method="post">
     <label for="name">Ім'я:</label>
     <input type="text" name="name" placeholder="Ваше ім'я" id="name"><br><br>
     <lable for="password">Пароль:</lable>
@@ -20,7 +22,8 @@
     <label for="female">Жіноча</label><br><br>
     <div id="error" style="color: red" ></div>
     <input type="submit" name="submit" value="Готово">
-  </form>
+  </form> -->
+
   <!-- <p id="text" title="Простий текст">Text</p>
 
   <span class="simple-text">Text 1</span>
